book-api/Kubernetes/bookapi-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-api
  namespace: dusty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-api 
  template:
    metadata:
      labels:
        app: book-api
    spec:
      containers:
        - name: book-api
          image: dustyshaw702/books-api:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
