book-api/Kubernetes/bookapi-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: book-api-service
  namespace: dusty
spec:
  selector:
    app: book-api # name of deployment 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
