book-api/Kubernetes/bookapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-api-ingress
  namespace: dusty
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: api.voyaging-volumes.duckdns.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: book-api-service
            port:
              number: 8080
